--- a/app/src/main/res/layout/activity_edit_wallet.xml
+++ b/app/src/main/res/layout/activity_edit_wallet.xml
@@ -9,7 +9,8 @@
     <EditText
         android:id="@+id/et_edit_wallet_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
@@ -17,29 +18,27 @@
         android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/tv_edit_wallet_currency"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/et_edit_wallet_amount" />
 
     <EditText
         android:id="@+id/et_edit_wallet_amount"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_height="42dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintRight_toLeftOf="@+id/tv_edit_wallet_currency"
-        android:layout_marginRight="0dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_name" />
+        app:layout_constraintRight_toRightOf="@+id/b_update_wallet"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_name"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/tv_edit_wallet_currency"
-        android:layout_width="100dp"
+        android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
@@ -47,22 +46,32 @@
         android:layout_marginTop="8dp"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/et_edit_wallet_amount"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/et_edit_wallet_amount" />
+        app:layout_constraintLeft_toLeftOf="@+id/b_delete_wallet"
+        app:layout_constraintRight_toRightOf="@+id/b_delete_wallet"
+        app:layout_constraintTop_toTopOf="@+id/et_edit_wallet_amount"
+        app:layout_constraintVertical_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.0" />
 
-    <ImageButton
-        android:id="@+id/ib_edit_wallet"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/b_update_wallet"
+        android:layout_width="88dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Update"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount"
+        app:layout_constraintRight_toLeftOf="@+id/b_delete_wallet"/>
+
+    <Button
+        android:id="@+id/b_delete_wallet"
+        android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add"
         android:layout_marginTop="8dp"
+        android:text="Delete"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount" />
 
 </android.support.constraint.ConstraintLayout>
