--- a/app/src/main/res/layout/activity_add_cost_item.xml
+++ b/app/src/main/res/layout/activity_add_cost_item.xml
@@ -50,7 +50,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_marginEnd="16dp"
+        android:id="@+id/linearLayout4">
 
         <TextView
             android:id="@+id/tv_cost_item_expenditure_label"
@@ -68,5 +69,119 @@
             android:layout_weight="1"
             android:textSize="18sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        android:id="@+id/linearLayout5">
+
+        <TextView
+            android:id="@+id/tv_cost_item_time_label"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="Дата"
+            android:layout_gravity="center_vertical|left"
+            android:textSize="18sp"
+            tools:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/tv_cost_item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="18sp" />
+
+        <ImageButton
+            android:id="@+id/ib_cost_item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            app:srcCompat="@drawable/ic_insert_invitation_black_24dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+        android:id="@+id/linearLayout7">
+
+        <EditText
+            android:id="@+id/et_cost_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Описание платежа"
+            android:inputType="textPersonName"
+            android:textAlignment="textStart" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:id="@+id/linearLayout6"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+        <TextView
+            android:id="@+id/tv_cost_item_amount_label"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Сумма"
+            android:textAlignment="textStart"
+            android:textSize="18sp"
+            tools:textAlignment="center" />
+
+        <EditText
+            android:id="@+id/et_cost_item_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:inputType="numberDecimal"/>
+
+        <TextView
+            android:id="@+id/tv_cost_item_wallet_currency"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/b_add_cost_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:text="Add"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
 </android.support.constraint.ConstraintLayout>
