--- a/app/src/main/res/layout/cost_item_view.xml
+++ b/app/src/main/res/layout/cost_item_view.xml
@@ -19,10 +19,25 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_cost_item_view_name"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_cost_item_view_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="textStart" />
+
+                    <TextView
+                        android:id="@+id/tv_cost_item_view_date_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="textEnd" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -30,22 +45,24 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_cost_item_view_amount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <TextView
-                        android:id="@+id/tv_cost_item_view_wallet_currency"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <TextView
                         android:id="@+id/tv_cost_item_view_wallet_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:textAlignment="textStart" />
+
+                    <TextView
+                        android:id="@+id/tv_cost_item_view_amount"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textEnd" />
+
+                    <TextView
+                        android:id="@+id/tv_cost_item_view_currency"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="textEnd" />
+
                 </LinearLayout>
 
             </LinearLayout>
