--- a/app/src/main/res/layout/wallet_operation_view.xml
+++ b/app/src/main/res/layout/wallet_operation_view.xml
@@ -19,10 +19,25 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_wallet_oper_view_name"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_wallet_oper_view_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="textStart" />
+
+                    <TextView
+                        android:id="@+id/tv_wallet_oper_view_date_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAlignment="textEnd" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -30,17 +45,22 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_wallet_oper_view_amount"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_wallet_oper_view_description"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textAlignment="textStart" />
 
                     <TextView
-                        android:id="@+id/tv_wallet_oper_view_time"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_wallet_oper_view_amount"
+                        android:layout_width="120dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:textAlignment="textEnd" />
+
+                    <TextView
+                        android:id="@+id/tv_wallet_oper_view_currency"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
                         android:textAlignment="textEnd" />
 
                 </LinearLayout>
