--- a/app/src/main/res/layout/activity_edit_wallet.xml
+++ b/app/src/main/res/layout/activity_edit_wallet.xml
@@ -15,7 +15,6 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="8dp"
@@ -30,7 +29,6 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:text=""
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/b_update_wallet"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_name"
@@ -44,13 +42,12 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/et_edit_wallet_amount"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/b_delete_wallet"
         app:layout_constraintRight_toRightOf="@+id/b_delete_wallet"
         app:layout_constraintTop_toTopOf="@+id/et_edit_wallet_amount"
-        app:layout_constraintVertical_bias="0.444"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/b_update_wallet"
@@ -74,19 +71,31 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount" />
 
+    <Button
+        android:id="@+id/b_add_wallet"
+        android:layout_width="88dp"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount"
+        app:layout_constraintRight_toLeftOf="@+id/b_update_wallet"
+        android:layout_marginRight="8dp" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_wallet_wallet_operation_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/b_update_wallet" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/b_add_wallet" />
 
 </android.support.constraint.ConstraintLayout>
