--- a/app/src/main/res/layout/wallet_operation_view.xml
+++ b/app/src/main/res/layout/wallet_operation_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="4dp">
@@ -17,54 +18,69 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/tv_wallet_oper_view_name"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textAlignment="textStart" />
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_wallet_oper_view_date_time"
+                        <TextView
+                            android:id="@+id/tv_wallet_oper_view_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textAlignment="textStart" />
+
+                        <TextView
+                            android:id="@+id/tv_wallet_oper_view_date_time"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textAlignment="textEnd" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textAlignment="textEnd" />
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_wallet_oper_view_description"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textAlignment="textStart" />
+
+                        <TextView
+                            android:id="@+id/tv_wallet_oper_view_amount"
+                            android:layout_width="120dp"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="textEnd" />
+
+                        <TextView
+                            android:id="@+id/tv_wallet_oper_view_currency"
+                            android:layout_width="40dp"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="textEnd" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <ImageButton
+                    android:id="@+id/tv_wallet_oper_view_menu"
+                    android:layout_width="25dp"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_wallet_oper_view_description"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textAlignment="textStart" />
-
-                    <TextView
-                        android:id="@+id/tv_wallet_oper_view_amount"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="textEnd" />
-
-                    <TextView
-                        android:id="@+id/tv_wallet_oper_view_currency"
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="textEnd" />
-
-                </LinearLayout>
-
+                    android:background="@null"
+                    android:cropToPadding="false"
+                    app:srcCompat="@drawable/ic_more_vert_black_24dp" />
             </LinearLayout>
 
         </RelativeLayout>
